fixed those stupid layout issues

--- a/app/styles/src/general.scss
+++ b/app/styles/src/general.scss
@@ -110,7 +110,7 @@ body {
   min-height: 100vh;
   max-height: 100vh;
   overflow: auto;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   width: 0;
